--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  camera: ^0.11.0+2
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.2
@@ -22,8 +23,7 @@ flutter:
   assets:
     - assets/
 
-
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/icon.png" 
