--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ flutter:
   assets:
     - assets/
 
-flutter_launcher_icons:
+flutter_icons:
   android: true
   ios: true
   image_path: "assets/icon.png" 
