--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,11 @@ android {
         }
     }
 }
+    
+dependencies {
+    implementation 'org.pytorch:pytorch_android:1.10.0'
+    implementation 'org.pytorch:pytorch_android_torchvision:1.10.0'
+}
 
 flutter {
     source = "../.."
